# onnxruntime

./: .gitignore  Cargo.toml  build.rs
onnxruntime/core/providers/cpu/reduction/: reduction_ops.cc
onnxruntime/core/providers/cuda/reduction/: reduction_ops.cc
orttraining/orttraining/core/graph/: training_op_defs.cc
rust/: Cargo.toml  build.bat  build.sh
rust/onnxruntime/: Cargo.toml  build.bat  build.rs  build.sh
rust/onnxruntime-sys/: Cargo.toml  build.rs  wrapper.h
rust/onnxruntime-sys/src/: lib.rs
rust/onnxruntime/examples/: time_onnx.rs
rust/onnxruntime/src/: lib.rs  named_onnx_value.rs  node.rs  run_options.rs  session.rs  session_options.rs  shaped_data.rs  tensor.rs  tensor_element.rs
