[package]
name = "onnxruntime"
version = "0.1.0"
authors = ["Johan Verwey <joverwey@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gpu = ["onnxruntime_sys/gpu"]

[dependencies]
onnxruntime_sys = {path = "../onnxruntime-sys"}
thiserror = "1.0"
widestring = "0.4.2"
lazy_static = "1.4.0"

[dev-dependencies] 
assert_approx_eq = "1.1.0"

